--- a/styles/partials/layout/_main.scss
+++ b/styles/partials/layout/_main.scss
@@ -17,6 +17,15 @@
 		gap: var(--gap);
 	}
 }
+.img-icon {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 100%;
+}
+.img-icon > img {
+	width: 200px;
+}
 .container-bg {
 	background-color: var(--bg-container);
 }
@@ -46,17 +55,16 @@
 	height: 400px;
 	align-items: center;
 	justify-content: center;
+	background-color: var(--bg-hero);
+	color: var(--base-color-lightest);
+	background-image: url("/static/img/hero-image.jpg");
+	background-position: right;
+	background-size: cover;
+	position: relative;
 	@include respond(tablet) {
 		display: grid;
 		grid-template-columns: repeat(12, 1fr);
 		grid-column: 1 / 13;
-		background-color: var(--bg-hero);
-		color: var(--base-color-lightest);
-		height: 400px;
-		background-image: url("/static/img/hero-image.jpg");
-		background-position: center;
-		background-size: cover;
-		position: relative;
 	}
 }
 .container-img {
@@ -77,10 +85,9 @@
 	}
 }
 .logo-hero {
-	@include respond(tablet) {
-		width: 100px;
-		height: auto;
-	}
+	width: 100px;
+	height: auto;
+	margin: 0 1rem;
 }
 .container-inner {
 	padding: 0 var(--padding);
